[project]
name = "docint"
version = "0.1.0"
description = "Extracting information from DOCuments INTelligently."
authors = [{ name = "mukundesh", email = "mukundesh@outlook.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "information extraction",
    "document intelligence",
    "computer vision",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "pydantic~=1.10",
    "polyleven>=0.8,<0.9",
    "pyyaml~=6.0",
    "python-dateutil>=2.8.2,<3",
    "pypdfium2>=3.20.1,<4",
    "pillow>=10.2.0,<11",
    "more-itertools>=10.2.0,<11",
]

[project.urls]
homepage = "https://github.com/mukundesh/docInt"
repository = "https://github.com/mukundesh/docInt"

[dependency-groups]
test = [
    "pytest>=7.1.3,<8",
    "pytest-cov>=4.0.0,<5",
]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.2.1,<0.3",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
# skip-string-normalization = true
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main"
    ]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37, py38, py39, py310, format, lint, build

[testenv]
allowlist_externals = pytest
extras =
    test
passenv = *
setenv =
    PYTHONPATH = {toxinidir}
    PYTHONWARNINGS = ignore
commands =
    pytest --cov=docint --cov-branch --cov-report=xml --cov-report=term-missing tests

[testenv:format]
allowlist_externals =
    isort
    black
extras =
    test
commands =
    isort docint tests
    black docint tests

[testenv:lint]
allowlist_externals =
    flake8
extras =
    test
commands =
    flake8 docint tests


[testenv:build]
allowlist_externals =
    poetry
    mkdocs
    twine
extras =
    doc
    dev
commands =
    poetry build
    mkdocs build
    twine check dist/*
"""

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["E", "F", "W", "I001"]
lint.ignore = ['F401', 'E501']

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["I001"] # fix only isort issues
lint.unfixable = []
lint.per-file-ignores = {}

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "dist",
    "node_modules",
    "venv",
    ".bak",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.7
target-version = "py37"
